# training-guides

./: .gitignore  .gitreview  .zuul.yaml  README.rst  bindep.txt  doc-test.conf  doc-tools-check-languages.conf  setup.cfg  test-requirements.txt  tox.ini
doc/glossary/: README.rst  glossary-terms.xml
doc/training-guides/: README.md  bk000-preface.xml  bk001-ch001-associate-getting-started.xml  bk001-ch003-associate-controller-node.xml  bk001-ch005-associate-compute-node.xml  bk001-ch007-associate-network-node.xml  bk002-ch001-operator-getting-started.xml  bk002-ch004-operator-controller-node.xml  bk002-ch005-operator-controller-node-lab.xml  bk002-ch007-operator-compute-node.xml  bk002-ch008-operator-compute-node-lab.xml  bk002-ch010-operator-network-node.xml  bk002-ch011-operator-network-node-lab.xml  bk002-ch013-operator-object-storage-node.xml  bk002-operator-training-guide.xml  bk003-ch001-developer-getting-started.xml  bk_preface.xml  conf.py  index.rst  lab000-virtualbox-basics.xml  lab001-control-node.xml  lab003-compute-node.xml  landslide.sh  module001-ch002-brief-overview.xml  module001-ch005-vm-provisioning-walk-through.xml  module001-ch006-overview-horizon-cli.xml  module001-ch007-keystone-arch.xml  module001-ch009-vm-placement.xml  module002-ch001-networking-in-openstack.xml  module003-ch006-more-concepts.xml  (+7 more)
labs/: HACKING.rst  Hacking.rst  README.md  Vagrantfile  getting-started.rst  osbash.sh
specs/: README.rst  template.rst
tools/: add-marker.sh  buildlang.sh  generatelabs  generatepot  generatepot-training.sh  generateslides  test-languages.sh
(+460 files in other folders)
