[metadata]
name = training-guides
summary = OpenStack Project Training Guides
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://git.openstack.org/cgit/openstack/training-guides/
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[build_sphinx]
all_files = 1
build-dir = doc/upstream-training/build
source-dir = doc/upstream-training/source

[pbr]
warnerrors = True

[wheel]
universal = 1
